--- a/index.html
+++ b/index.html
@@ -3,5 +3,15 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <table>
+    <tr>
+      <td>Infographics
+      </td>
+      <td>Writing Samples
+      </td>
+      <td>Projects
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
