--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello and welcome!</h1>
+<p>You have reached the professional portfolio of Eric Cameron</p>
   <table>
     <tr>
-      <td>Infographics
+      <td><a href="infographics.html">Infographics</a>
       </td>
-      <td>Writing Samples
+      <td><a href="writing.html">Writing Samples</a>
       </td>
-      <td>Projects
+      <td><a href="projects.html">Projects</a>
+      </td>
+      <td><a href="presentations.html">Presentations</a>
       </td>
     </tr>
   </table>
