--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  tr {
+    width: 150px;
+  }
+  </head>
+  
 <body>
-<h1>Hello and welcome!</h1>
-<p>You have reached the professional portfolio of Eric Cameron</p>
-  <table>
-    <tr>
-      <td><a href="infographics.html">Infographics</a>
-      </td>
-      <td><a href="writing.html">Writing Samples</a>
-      </td>
-      <td><a href="projects.html">Projects</a>
-      </td>
-      <td><a href="presentations.html">Presentations</a>
-      </td>
-    </tr>
-  </table>
-</body>
+  <h1>Hello and welcome!</h1>
+  <p>You have reached the professional portfolio of Eric Cameron</p>
+    <table>
+      <tr>
+        <td><a href="infographics.html">Infographics</a>
+        </td>
+        <td><a href="writing.html">Writing Samples</a>
+        </td>
+        <td><a href="projects.html">Projects</a>
+        </td>
+        <td><a href="presentations.html">Presentations</a>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
