--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-  tr {
-    width: 150px;
-  }
+    <style>
+      tr {
+        width: 150px;
+      }
+    </style>
   </head>
   
 <body>
