--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <style>
       tr {
-        width: 150px;
+        width: 250px;
+        border: 1px solid;
       }
     </style>
   </head>
