--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <style>
-      tr {
-        width: 250px;
+      table, tr, td {
         border: 1px solid;
+      }
+      td{
+         width: 250px;
       }
     </style>
   </head>
