--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         border: 1px solid;
       }
       td{
-         width: 250px;
+        width: 250px;
+        align:center;
       }
     </style>
   </head>
