--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      table, tr, td {
-        border: 1px solid;
-      }
-      td{
-        width: 250px;
-        align:center;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   
 <body>
