--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <p>You have reached the professional portfolio of Eric Cameron</p>
     <table>
       <tr>
+        <td><a href="code.html">Various software and scripts I've written</a>
+        </td>
         <td><a href="infographics.html">Infographics</a>
         </td>
         <td><a href="writing.html">Writing Samples</a>
