--- a/infographics.html
+++ b/infographics.html
@@ -10,7 +10,9 @@
   <p>Below you will find some examples of infographics I've created.</p>
     <table>
       <tr>
-        <td><a href="infographics.html">Infographics</a>
+        <td><a href="DB Design Process.pdf">
+          <h2>Database Design Process</h2></a>
+          <p>A description of the database design process, simplified for a 200-level college class.</p>
         </td>
         <td><a href="writing.html">Writing Samples</a>
         </td>
