--- a/infographics.html
+++ b/infographics.html
@@ -11,13 +11,13 @@
     <table>
       <tr>
         <td><a href="Structured_Query_Language.pdf">
-          <h2>Database Design Process</h2></a>
-          <p>A description of the database design process, simplified for a 200-level college class.</p>
+          <h2>Uses for SQL </h2></a>
+          <p>Relationship graphic made with Coggle to help students visualize data definition vs. data query vs. data manipulation vs. data control.</p>
+          <p>Students often think SQL (Structured Query Language) is only about querying data, so it's important to showcase other uses!</p>
         </td>
         <td><a href="DB Design Process.pdf">
           <h2>Database Design Process</h2></a>
-          <p>Relationship graphic made with Coggle to help students visualize data definition vs. data query vs. data manipulation vs. data control.</p>
-          <p>Students often think SQL (Structured Query Language) is only about querying data, so it's important to showcase other uses!</p>
+          <p>A description of the database design process, simplified for a 200-level college class.</p>
         </td>
         
         <td><a href="writing.html">Writing Samples</a>
