--- a/infographics.html
+++ b/infographics.html
@@ -10,21 +10,14 @@
   <p>Below you will find some examples of infographics I've created.</p>
     <table>
       <tr>
-        <td><a href="Structured_Query_Language.pdf">
+        <td><a href="Structured_Query_Language.pdf" target="_top">
           <h2>Uses for SQL </h2></a>
           <p>Relationship graphic made with Coggle to help students visualize data definition vs. data query vs. data manipulation vs. data control.</p>
           <p>Students often think SQL (Structured Query Language) is only about querying data, so it's important to showcase other uses!</p>
         </td>
-        <td><a href="DB Design Process.pdf">
+        <td><a href="DB Design Process.pdf" target="_top">
           <h2>Database Design Process</h2></a>
           <p>A description of the database design process, simplified for a 200-level college class.</p>
-        </td>
-        
-        <td><a href="writing.html">Writing Samples</a>
-        </td>
-        <td><a href="projects.html">Projects</a>
-        </td>
-        <td><a href="presentations.html">Presentations</a>
         </td>
       </tr>
     </table>
