--- a/code.html
+++ b/code.html
@@ -10,13 +10,13 @@
   <p>Below you will find some code samples.</p>
     <table>
       <tr>
-        <td><a href="infographics.html">Infographics</a>
+        <td><h2><a href="Granting Database Permissions.xlsx" target="_top">Database Setup</a></h2>
+          <p>A script I created in Excel to generate my class schemas, grant permissions, and load data files to their schemas.</p>
+          <p>You may ask why I did this in Excel; I found it easier to copy and paste from our database server than to save to a data file.</p>
         </td>
-        <td><a href="writing.html">Writing Samples</a>
-        </td>
-        <td><a href="projects.html">Projects</a>
-        </td>
-        <td><a href="presentations.html">Presentations</a>
+        <td><h2><a href="Generate Dataset.py" target="_top">Generating Diverse Datasets</a></h2>
+          <p>A Python script I created to generate random data sets that include diverse names. Textbook databases too often are filled with names like John Smith.</p>
+          <p>There are a few data files that go with this that will prevent this from running but you can see my logic!</p>
         </td>
       </tr>
     </table>
