--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio of Eric Cameron</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  
+</head>
 <body>
-  <h1>Hello and welcome!</h1>
-  <p>You have reached the professional portfolio of Eric Cameron</p>
-    <table>
-      <tr>
-        <td><a href="code.html">Various software and scripts I've written</a>
-        </td>
-        <td><a href="infographics.html">Infographics</a>
-        </td>
-        <td><a href="writing.html">Writing Samples</a>
-        </td>
-        <td><a href="projects.html">Projects</a>
-        </td>
-        <td><a href="presentations.html">Presentations</a>
-        </td>
-      </tr>
-    </table>
-  </body>
+
+    <div class="container">
+        <header>
+            <h2>Welcome to Eric Cameron's Portfolio</h2>
+        </header>
+        <nav>
+            <a href="code.html">Code Portfolio</a> | 
+            <a href="infographics.html">Infographics Portfolio</a> | 
+            <a href="writing.html">Writing Portfolio</a> | 
+            <a href="presentations.html">Presentations Portfolio</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+        </nav>
+        <main>
+            <p>Welcome! You've reached the portfolio of Eric Cameron, currently employed as a Java instructor at <a href="http://www.techelevator.com">Tech Elevator</a>. I am a programmer, educator, and writer.</p>
+            <p>Please visit the links above to visit the subsections of my portfolio.</p>
+        </main>
+    </div>
+    
+</body>
 </html>
