--- a/infographics.html
+++ b/infographics.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio of Eric Cameron</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  
+</head>
 <body>
-  <h1>Hello and welcome!</h1>
-  <p>You have reached the professional portfolio of Eric Cameron</p>
-  <p>Below you will find some examples of infographics I've created.</p>
-    <table>
-      <tr>
-        <td><a href="Structured_Query_Language.pdf" target="_top">
-          <h2>Uses for SQL </h2></a>
-          <p>Relationship graphic made with Coggle to help students visualize data definition vs. data query vs. data manipulation vs. data control.</p>
-          <p>Students often think SQL (Structured Query Language) is only about querying data, so it's important to showcase other uses!</p>
-        </td>
-        <td><a href="DB Design Process.pdf" target="_top">
-          <h2>Database Design Process</h2></a>
-          <p>A description of the database design process, simplified for a 200-level college class.</p>
-        </td>
-      </tr>
-    </table>
-  </body>
+
+    <div class="container">
+        <header>
+            <h2>Welcome to Eric Cameron's Portfolio</h2>
+        </header>
+        <nav>
+            <a href="code.html">Code Portfolio</a> | 
+            <a href="infographics.html">Infographics Portfolio</a> | 
+            <a href="writing.html">Writing Portfolio</a> | 
+            <a href="presentations.html">Presentations Portfolio</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+        </nav>
+        <main>
+          <article>
+            <a href="Structured_Query_Language.pdf" target="_top"><h2>Uses for SQL </h2></a>          
+            <p>Relationship graphic made with Coggle to help students visualize data definition vs. data query vs. data manipulation vs. data control.</p>
+            <p>Students often think SQL (Structured Query Language) is only about querying data, so it's important to showcase other uses!</p>            
+          </article>
+          <article>
+            <a href="DB Design Process.pdf" target="_top"><h2>Database Design Process</h2></a>
+            <p>A description of the database design process, simplified for a 200-level college class.</p>
+          </article>
+        </main>
+    </div>
+    
+</body>
 </html>
