--- a/infographics.html
+++ b/infographics.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <header>
-            <h2>Welcome to Eric Cameron's Portfolio</h2>
+            <h2>Welcome to Eric Cameron's Infographics Portfolio</h2>
         </header>
         <nav>
             <a href="code.html">Code Portfolio</a> | 
