--- a/writing.html
+++ b/writing.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio of Eric Cameron</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  
+</head>
 <body>
-  <h1>Hello and welcome!</h1>
-  <p>You have reached the professional portfolio of Eric Cameron</p>
-  <p>Below you will find some writing samples.</p>
-    <table>
-      <tr>
-        <td><a href="infographics.html">Infographics</a>
-        </td>
-        <td><a href="writing.html">Writing Samples</a>
-        </td>
-        <td><a href="projects.html">Projects</a>
-        </td>
-        <td><a href="presentations.html">Presentations</a>
-        </td>
-      </tr>
-    </table>
-  </body>
+
+    <div class="container">
+        <header>
+            <h2>Welcome to Eric Cameron's Writing Portfolio</h2>
+        </header>
+        <nav>
+            <a href="code.html">Code Portfolio</a> | 
+            <a href="infographics.html">Infographics Portfolio</a> | 
+            <a href="writing.html">Writing Portfolio</a> | 
+            <a href="presentations.html">Presentations Portfolio</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+        </nav>
+        <main>
+          <article>
+            <a href="Windows 8.html" target="_top"><h2>Why You'll Love Teaching Windows 8</h2></a>          
+            <p>Article for Pearson's educator site.</p>
+            <p>A blog entry I wrote to (somewhat optimistically) discuss Windows 8 features faculty would love teaching.</p>            
+          </article>
+        </main>
+    </div>
+    
+</body>
 </html>
