--- a/infographics.html
+++ b/infographics.html
@@ -14,9 +14,9 @@
         </header>
         <nav>
             <a href="code.html">Code Portfolio</a> | 
+            <a href="workshops.html">Technical Workshop Portfolio</a> | 
             <a href="infographics.html">Infographics Portfolio</a> | 
             <a href="writing.html">Writing Portfolio</a> | 
-            <a href="presentations.html">Presentations Portfolio</a> | 
             <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
         </nav>
         <main>
