--- a/workshops.html
+++ b/workshops.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio of Eric Cameron</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  
+</head>
 <body>
-  <h1>Hello and welcome!</h1>
-  <p>You have reached the professional portfolio of Eric Cameron</p>
-  <p>Below you will find PowerPoint presentations I have created.</p>
-    <table>
-      <tr>
-        <td><a href="infographics.html">Infographics</a>
-        </td>
-        <td><a href="writing.html">Writing Samples</a>
-        </td>
-        <td><a href="projects.html">Projects</a>
-        </td>
-        <td><a href="presentations.html">Presentations</a>
-        </td>
-      </tr>
-    </table>
-  </body>
+
+    <div class="container">
+        <header>
+            <h2>Welcome to Eric Cameron's Writing Portfolio</h2>
+        </header>
+        <nav>
+            <a href="code.html">Code Portfolio</a> | 
+            <a href="workshops.html">Technical Workshop Portfolio</a> | 
+            <a href="infographics.html">Infographics Portfolio</a> | 
+            <a href="writing.html">Writing Portfolio</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+        </nav>
+        <main>
+          <article>
+            <a href="https://github.com/profcameron/markdown-workshop" target="_top"><h2>Introduction to Markdown</h2></a>          
+            <p>A one-hour workshop on the fundamentals of the markdown language.</p>
+            <p>Designed to introduce students to the markdown language. My goal for this workshop is to help familiarize students with Markdown to help develop README files to document their portfolio projects.</p>            
+          </article>
+          <article>
+            <a href="https://github.com/profcameron/database-programming-workshop" target="_top"><h2>Introduction to Database Programming</h2></a>          
+            <p>A one-hour introduction to database programming (triggers, stored procedures, functions).</p>
+            <p>At Tech Elevator, we teach students how to query data, insert data, and create/modify tables using SQL, but as we are not a database bootcamp, we don't get into some of the procedural programming. When we get to our database portion of the program, some students really fall in love with databases, and I put this workshop together to show students you can do more than just query data.</p>
+          </article>
+        </main>
+    </div>
+    
+</body>
 </html>
