Cleaning up some formatting

--- a/code.html
+++ b/code.html
@@ -38,10 +38,10 @@
                    Basically, it's a great way to use Excel's string manipulation. </p> 
               </article>
               <article>
-                <h2><a href="generateDataset.py" target="_top"><h2>Generating Diverse Datasets</h2></a>          
+                <h2><a href="generateDataset.py" target="_top">Generating Diverse Datasets</h2></a>
                 <p>A Python script I created to generate random data sets that include diverse names. Textbook databases too often are filled with names like John Smith.</p>
                 <p>There are a few data files that go with this that will prevent this from running but you can see my logic!</p>
-              </article>        
+              </article>
         </main>
     </div>
     
