Cleaning up some formatting

--- a/code.html
+++ b/code.html
@@ -37,11 +37,11 @@
                    This strips the domain from the username, creates an account with the same username (using Windows authentication/single sign on), create a new schema for the user, grant them permissions, and populate it, and give read/execute access to common databases. There are a few other tabs to clean up student accounts at the end of the semester and refresh instructor and tutor accounts.<br />
                    Basically, it's a great way to use Excel's string manipulation. </p> 
               </article>
-              <article>
+              <!-- <article>
                 <h2><a href="generateDataset.py" target="_top">Generating Diverse Datasets</h2></a>
                 <p>A Python script I created to generate random data sets that include diverse names. Textbook databases too often are filled with names like John Smith.</p>
                 <p>There are a few data files that go with this that will prevent this from running but you can see my logic!</p>
-              </article>
+              </article> -->
         </main>
     </div>
     
