--- a/writing.html
+++ b/writing.html
@@ -21,6 +21,11 @@
         </nav>
         <main>
           <article>
+            <a href="API_Sample.md" target="_top"><h2>Sample API Documentation</h2></a>          
+            <p>Example of API Documentation.</p>
+            <p>Documentation for a fake workout builder application. Includes documenting three possible endpoints with a path, a path variable, and filter.</p>            
+          </article>
+          <article>
             <a href="Windows 8.html" target="_top"><h2>Why You'll Love Teaching Windows 8</h2></a>          
             <p>Article for Pearson's educator site.</p>
             <p>A blog entry I wrote to (somewhat optimistically) discuss Windows 8 features faculty would love teaching.</p>            
