--- a/writing.html
+++ b/writing.html
@@ -21,7 +21,7 @@
         </nav>
         <main>
           <article>
-            <a href="API_Sample.md" target="_top"><h2>Sample API Documentation</h2></a>          
+            <a href="API_Sample.html" target="_top"><h2>Sample API Documentation</h2></a>          
             <p>Example of API Documentation.</p>
             <p>Documentation for a fake workout builder application. Includes documenting three possible endpoints with a path, a path variable, and filter.</p>            
           </article>
