--- a/API_sample.html
+++ b/API_sample.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-Note: Originally formatted as <a href="API_Sample.md">Markdown</a>; converted to HTML here so it can be viewed in browser.
+<p>Note: Originally formatted as <a href="API_Sample.md">Markdown</a>; converted to HTML here so it can be viewed in browser.</p>
 <h1 id="sample-api-documentation">Sample API Documentation</h1>
 <p>This is a sample API documentation for a fictional workout builder application. Note that all of these requests will return a 404 error for the moment.</p>
 <h2 id="postman-collection">Postman Collection</h2>
