--- a/API_sample.html
+++ b/API_sample.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Example.com Workout Builder API Documentation</title>
 </head>
 <body>
 <p>Note: Originally formatted as <a href="API_Sample.md">Markdown</a>; converted to HTML here so it can be viewed in browser.</p>
