--- a/API_sample.html
+++ b/API_sample.html
@@ -46,9 +46,9 @@
 <h3 id="parameter-information">Parameter Information</h3>
 <table>
 <tr>
-<th>Parameters</th>
-<th>Data Type</th>
-<th>Description</th>
+<td>Parameters</td>
+<td>Data Type</td>
+<td>Description</td>
 </tr>
 <tr>
 <td>id</td>
@@ -74,9 +74,9 @@
 <h3 id="parameter-information">Parameter Information</h3>
 <table>
 <tr>
-<th>Parameters</th>
-<th>Data Type</th>
-<th>Description</th>
+<td>Parameters</td>
+<td>Data Type</td>
+<td></td>Description</td>
 </tr>
 <tr>
 <td>value</td>
