--- a/APISample.html
+++ b/APISample.html
@@ -45,16 +45,8 @@
 <p><code>GET /exercises/{id}</code></p>
 <h3 id="parameter-information">Parameter Information</h3>
 <table>
-<tr>
-<td>Parameters</td>
-<td>Data Type</td>
-<td>Description</td>
-</tr>
-<tr>
-<td>id</td>
-<td>int</td>
-<td>The unique id number of a specific exercise.</td>
-</tr>
+<tr><td>Parameters</td><td>Data Type</td><td>Description</td></tr>
+<tr><td>id</td><td>int</td><td>The unique id number of a specific exercise.</td></tr>
 </table>
 <h3 id="request-example">Request Example</h3>
 <p><code>curl -X GET &#39;http://www.example.com/api/v1/exercises/101&#39;</code></p>
