--- a/APISample.html
+++ b/APISample.html
@@ -65,16 +65,8 @@
 <p><code>GET /exercises?muscle=value</code></p>
 <h3 id="parameter-information">Parameter Information</h3>
 <table>
-<tr>
-<td>Parameters</td>
-<td>Data Type</td>
-<td></td>Description</td>
-</tr>
-<tr>
-<td>value</td>
-<td>String</td>
-<td>The body part for which you want to search for. Case insensitive.</td>
-</tr>
+<tr><td>Parameters</td><td>Data Type</td><td>Description</td></tr>
+<tr><td>value</td><td>String</td><td>The body part for which you want to search for. Case insensitive.</td></tr>
 </table>
 <h3 id="request-example">Request Example</h3>
 <p><code>curl -X GET &#39;http://www.example.com/api/v1/exercises?muscle=bicep&#39;</code></p>
