--- a/APISample.html
+++ b/APISample.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example.com Workout Builder API Documentation</title>
+    <style>
+        table {
+          border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
 <p>Note: Originally formatted as <a href="API_Sample.md">Markdown</a>; converted to HTML here so it can be viewed in browser.</p>
