--- a/APISample.html
+++ b/APISample.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example.com Workout Builder API Documentation</title>
     <style>
-        table {
+        table, tr, td {
           border: 1px solid black;
         }
     </style>
