--- a/API_sample.html
+++ b/API_sample.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <h2>Welcome to Eric Cameron's Infographics Portfolio</h2>
+            <h2>Sample API Documentation/h2>
         </header>
         <nav>
             <a href="code.html">Code Portfolio</a> | 
