--- a/writing.html
+++ b/writing.html
@@ -26,6 +26,11 @@
             <p>Documentation for a fake workout builder application. Includes documenting three possible endpoints with a path, a path variable, and filter.</p>            
           </article>
           <article>
+            <a href="https://devtales101.substack.com/p/how-to-succeed-in-coding-bootcamps" target="_top"><h2>Dev Tales Interview</h2></a>          
+            <p>Interview with Dev Tales newsletter</p>
+            <p>A December 2023 interview I did for Dimos Merachtsakis's Dev Tales newsletter, discussing bootcamps, writing, and job preparation.</p>            
+          </article>
+          <article>
             <a href="Windows 8.html" target="_top"><h2>Why You'll Love Teaching Windows 8</h2></a>          
             <p>Article for Pearson's educator site.</p>
             <p>A blog entry I wrote to (somewhat optimistically) discuss Windows 8 features faculty would love teaching.</p>            
