--- a/writing.html
+++ b/writing.html
@@ -17,7 +17,8 @@
             <a href="workshops.html">Technical Workshop Portfolio</a> | 
             <a href="infographics.html">Infographics Portfolio</a> | 
             <a href="writing.html">Writing Portfolio</a> | 
-            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+            <a href="https://www.youtube.com/ericcameron" target="_top">YouTube</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron" target="_top">LinkedIn</a>
         </nav>
         <main>
           <article>
