--- a/infographics.html
+++ b/infographics.html
@@ -17,8 +17,10 @@
             <a href="workshops.html">Technical Workshop Portfolio</a> | 
             <a href="infographics.html">Infographics Portfolio</a> | 
             <a href="writing.html">Writing Portfolio</a> | 
-            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+            <a href="https://www.youtube.com/ericcameron" target="_top">YouTube</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron" target="_top">LinkedIn</a>
         </nav>
+
         <main>
           <article>
             <a href="Structured_Query_Language.pdf" target="_top"><h2>Uses for SQL </h2></a>          
