--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <a href="workshops.html">Technical Workshop Portfolio</a> | 
             <a href="infographics.html">Infographics Portfolio</a> | 
             <a href="writing.html">Writing Portfolio</a> | 
-            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+            <a href="https://www.youtube.com/ericcameron" target="_top">YouTube</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron" target="_top">LinkedIn</a>
         </nav>
         <main>
             <p>Welcome! You've reached the portfolio of Eric Cameron, currently employed as a Java instructor at <a href="http://www.techelevator.com">Tech Elevator</a>. I am a programmer, educator, and writer.</p>
