--- a/code.html
+++ b/code.html
@@ -14,11 +14,13 @@
         </header>
         <nav>
             <a href="code.html">Code Portfolio</a> | 
-            <a href="workshops.html">Technical Workshops Portfolio</a> | 
+            <a href="workshops.html">Technical Workshop Portfolio</a> | 
             <a href="infographics.html">Infographics Portfolio</a> | 
             <a href="writing.html">Writing Portfolio</a> | 
-            <a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a>
+            <a href="https://www.youtube.com/ericcameron" target="_top">YouTube</a> | 
+            <a href="https://www.linkedin.com/in/ericcameron" target="_top">LinkedIn</a>
         </nav>
+
         <main>
             <article>
                 <h2><a href="https://github.com/profcameron/usernameCheck-openai" target="_top">Username Check (OpenAI)</a></h2>
