--- a/workshops.html
+++ b/workshops.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <header>
-            <h2>Welcome to Eric Cameron's Writing Portfolio</h2>
+            <h2>Welcome to Eric Cameron's Technical Workshop Portfolio</h2>
         </header>
         <nav>
             <a href="code.html">Code Portfolio</a> | 
