--- a/writing.html
+++ b/writing.html
@@ -27,6 +27,12 @@
             <p>Documentation for a fake workout builder application. Includes documenting three possible endpoints with a path, a path variable, and filter.</p>            
           </article>
           <article>
+            <a href="https://github.com/profcameron/jest-workshop" target="_top"><h2>Sample Project Documentation</h2></a>          
+            <p>Example of documentation for a GitHub project.</p>
+            <p>Documentation for a project demonstrating JEST. I find that many projects have a lot of assumed knowledge, so I try to be detailed in discussing pre-requsites to getting my code up and running. I recall times when I personally have gone to conferences and was unable to follow along with presenters due to assumed knowledge.</p>            
+            <p>If I say "well, it works on my machine" in response to someone struggling to catch up, it means my documentation needs work.</p>
+          </article>            
+        <article>
             <a href="https://devtales101.substack.com/p/how-to-succeed-in-coding-bootcamps" target="_top"><h2>Dev Tales Interview</h2></a>          
             <p>Interview with Dev Tales newsletter</p>
             <p>A December 2023 interview I did for Dimos Merachtsakis's Dev Tales newsletter, discussing bootcamps, writing, and job preparation.</p>            
