--- a/writing.html
+++ b/writing.html
@@ -27,6 +27,10 @@
             <p>Documentation for a fake workout builder application. Includes documenting three possible endpoints with a path, a path variable, and filter.</p>            
           </article>
           <article>
+            <a href="https://docs.google.com/document/d/1qqQ2SlmOmbxpIT1obr-EafFdjemp_bvLoKhk_XKOcaM/view" target="_top"><h2>Sample How-To Guide (Google Docs)</h2></a>          
+            <p>Example of documentation (written in Google Docs) demonstrating how to associate Microsoft Word documents with Google Docs instead.</p>            
+          </article>            
+          <article>
             <a href="https://github.com/profcameron/jest-workshop" target="_top"><h2>Sample GitHub Documentation (in Markdown)</h2></a>          
             <p>Example of documentation (written in Markdown) for a GitHub project for a demo of the JEST tool. I find that many projects have a lot of assumed knowledge, so I try to be detailed in discussing pre-requisites to getting my code up and running. I recall times when I personally have gone to conferences and was unable to follow along with presenters due to assumed knowledge.</p>            
             <p>If I say "well, it works on my machine" in response to someone struggling to catch up, it means my documentation needs work.</p>
