--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://www.linkedin.com/in/ericcameron" target="_top">LinkedIn</a>
         </nav>
         <main>
-            <p>Welcome! You've reached the portfolio of Eric Cameron, currently employed as a Java instructor at <a href="http://www.techelevator.com">Tech Elevator</a>. I am a programmer, educator, and writer.</p>
+            <p>Welcome! You've reached the portfolio of Eric Cameron, I am a programmer, educator, and writer.</p>
             <p>Please visit the links above to visit the subsections of my portfolio.</p>
         </main>
     </div>
