Updating some links, updating the infographics page.

--- a/code.html
+++ b/code.html
@@ -24,17 +24,17 @@
 
         <main>
             <article>
-                <h2><a href="https://github.com/profcameron/usernameCheck-openai" target="_top">Username Check (OpenAI)</a></h2>
+                <h2><a href="https://github.com/profcameron/usernameCheck-openai" target="_blank">Username Check (OpenAI)</a></h2>
                 <p>Harnessing the power of OpenAI in a command-line Java program and the Spring framework to connect to OpenAI and check a username for appropriateness.</p>
                 <p>A more in-depth set of notes can be found in the project's README.</p>
             </article>
             <article>
-                <h2><a href="https://github.com/profcameron/cloudinary-vue" target="_top">Cloudinary Vue Demo</a></h2>
+                <h2><a href="https://github.com/profcameron/cloudinary-vue" target="_blank">Cloudinary Vue Demo</a></h2>
                 <p>Using Cloudinary's API in a Vue front-end, showing component-based design.</p>
                 <p>A more in-depth set of notes can be found in the project's README.</p>
             </article>
             <article>
-                <h2><a href="https://docs.google.com/spreadsheets/d/1rTQg9q_sAF2I3mwRk-KudECXhBkokMrgiqooIJarmjg/edit?usp=sharing" target="_top">Database Setup</a></h2>
+                <h2><a href="https://docs.google.com/spreadsheets/d/1rTQg9q_sAF2I3mwRk-KudECXhBkokMrgiqooIJarmjg/edit?usp=sharing" target="_blank">Database Setup</a></h2>
                 <p>A script I created in Excel to generate my class MySQL schemas, grant permissions, and load data to their schemas.</p>
                 <p>I've ported it over to Google Sheets. My goal was to paste my roster and have everything generated for me.<br />
                    This strips the domain from the username, creates an account with the same username (using Windows authentication/single sign on), create a new schema for the user, grant them permissions, and populate it, and give read/execute access to common databases. There are a few other tabs to clean up student accounts at the end of the semester and refresh instructor and tutor accounts.<br />
