Updating API_sample mostly; deleting some extra files

--- a/workshops.html
+++ b/workshops.html
@@ -24,13 +24,13 @@
         <main>
           <article>
             <a href="https://github.com/profcameron/markdown-workshop" target="_blank"><h2>Introduction to Markdown</h2></a>          
-            <p>A one-hour workshop on the fundamentals of the markdown language.</p>
-            <p>Designed to introduce students to the markdown language. My goal for this workshop is to help familiarize students with Markdown to help develop README files to document their portfolio projects.</p>            
+            <p>A one-hour workshop on the fundamentals of the Markdown language.</p>
+            <p>Designed to introduce students to the Markdown language. My goal for this workshop is to help familiarize students with Markdown to help develop README files to document their portfolio projects.</p>            
           </article>
           <article>
             <a href="https://github.com/profcameron/database-programming-workshop" target="_blank"><h2>Introduction to Database Programming</h2></a>          
             <p>A one-hour introduction to database programming (triggers, stored procedures, functions).</p>
-            <p>At Tech Elevator, we teach students how to query data, insert data, and create/modify tables using SQL, but as we are not a database bootcamp, we don't get into some of the procedural programming. When we get to our database portion of the program, some students really fall in love with databases, and I put this workshop together to show students you can do more than just query data.</p>
+            <p>Designed to introduce students to some of the non-query database functionality.</p>
           </article>
         </main>
     </div>
