Adding database writing

--- a/API_sample.html
+++ b/API_sample.html
@@ -61,7 +61,8 @@
                 "instructions": "Stand with your feet apart, approximately shoulder-width apart, with your arms hanging at your sides. Lift your shoulders towards your ears, holding the position at the peak for a moment. Slowly lower your shoulders to your starting position."
             },
         ]
-        </code></pre><h2>Retrieve a Specific Exercise</h2>
+        </code></pre>
+        <h2>Retrieve a Specific Exercise</h2>
         <p>Returns an exercise, based on the id number.</p>
         <h3>Endpoint</h3>
         <p><code>GET /exercises/{id}</code></p>
