--- a/writing.html
+++ b/writing.html
@@ -23,6 +23,11 @@
         </nav>
         <main>
           <article>
+            <a href="database-prepend.html"><h2>Exploring SQL Server String Functions</h2></a>          
+            <p>Written as a blog entry demonstrating a few different ways to solve the same problem in SQL Server.</p>
+            <p>Documentation with sample code and explanation for ways to create a CHAR field that starts with the letter C, ends with the value from an INT field, and fills in the values in the middle with zero to create a constant, 6 character result.</p>            
+          </article>
+          <article>
             <a href="API_Sample.html"><h2>Sample API Documentation</h2></a>          
             <p>Example of API Documentation.</p>
             <p>Documentation for a fake workout builder application. Includes documenting three possible endpoints with a path, a path variable, and filter.</p>            
