Mobile-friendly version

--- a/navbar.html
+++ b/navbar.html
@@ -1,8 +1,8 @@
 
-    <a href="index.html">Home</a> | 
-    <a href="code.html">Code Portfolio</a> | 
-    <a href="workshops.html">Technical Workshop Portfolio</a> | 
-    <a href="infographics.html">Infographics Portfolio</a> | 
-    <a href="writing.html">Writing Portfolio</a> | 
-    <a href="https://www.youtube.com/ericcameron" target="_blank">YouTube</a> | 
+    <a href="index.html">Home</a>
+    <a href="code.html">Code Portfolio</a>
+    <a href="workshops.html">Technical Workshop Portfolio</a>
+    <a href="infographics.html">Infographics Portfolio</a>
+    <a href="writing.html">Writing Portfolio</a>
+    <a href="https://www.youtube.com/ericcameron" target="_blank">YouTube</a>
     <a href="https://www.linkedin.com/in/ericcameron" target="_blank">LinkedIn</a>
