Updating favicons; moving some styles into stylesheet from API documentation file

--- a/database-prepend.html
+++ b/database-prepend.html
@@ -6,6 +6,13 @@
     <title>SQL Server Functions</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
+    <!-- favicon options for different browsers/devices -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <!-- Adding a little spacing and separation between articles-->
     <style>
