--- a/API_sample.html
+++ b/API_sample.html
@@ -6,12 +6,14 @@
     <title>Sample API Documentation</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
+    <!-- favicon options for different browsers/devices -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <style>
-        table, tr, td {
-          border: 1px solid black;
-        }        
-    </style>
 
 </head>
 <body>
