--- a/writing.html
+++ b/writing.html
@@ -48,6 +48,11 @@
             <p>Example of documentation (written in Markdown) for a GitHub project for a demo of the JEST tool. I find that many projects have a lot of assumed knowledge, so I try to be detailed in discussing pre-requisites to getting my code up and running. I recall times when I personally have gone to conferences and was unable to follow along with presenters due to assumed knowledge.</p>            
             <p>If I say "well, it works on my machine" in response to someone struggling to catch up, it means my documentation needs work.</p>
           </article>            
+          <article>
+            <a href="InterviewWithAScampire.pdf"><h2>Interview with a Scampire</h2></a>          
+            <p>I had a scammer attempt to use a job offer to scam me out of $4,000.</p>
+            <p>I recognized the scam immediately, but you can follow my adventure to get their Zelle, Teams, and domain name suspended.</p>            
+          </article>
         <article>
             <a href="https://devtales101.substack.com/p/how-to-succeed-in-coding-bootcamps" target="_blank"><h2>Dev Tales Interview</h2></a>          
             <p>Interview with Dev Tales newsletter</p>
