Add Merge to writing page

--- a/writing.html
+++ b/writing.html
@@ -30,6 +30,11 @@
         </nav>
         <main>
           <article>
+            <a href="database-merge.html"><h2>SQL MERGE Command</h2></a>          
+            <p>Written as an article demonstrating the use of the SQL MERGE command.</p>
+            <p>When I've taught SQL, the MERGE command is one I don't remember ever getting around to teaching. It's not something you use every day, but there's a certain elegance to it.</p>
+          </article>
+          <article>
             <a href="database-prepend.html"><h2>Exploring SQL Server String Functions</h2></a>          
             <p>Written as a blog entry demonstrating a few different ways to solve the same problem in SQL Server.</p>
             <p>Documentation with sample code and explanation for ways to create a CHAR field that starts with the letter C, ends with the value from an INT field, and fills in the values in the middle with zero to create a constant, 6 character result.</p>            
